tests/miz/pass/types/pass_type_elaboration_two_edge_local_mode_reserved_variable_equality_001.miz
definition
  mode BaseTwoEdgeModeEqualityDef: BaseTwoEdgeModeEquality is set;
end;

definition
  mode MiddleTwoEdgeModeEqualityDef: MiddleTwoEdgeModeEquality is BaseTwoEdgeModeEquality;
end;

definition
  mode OuterTwoEdgeModeEqualityDef: OuterTwoEdgeModeEquality is MiddleTwoEdgeModeEquality;
end;

reserve z for OuterTwoEdgeModeEquality;
theorem TwoEdgeLocalModeReservedVariableEqualityPayloadBoundary: z = z;
