tests/miz/fail/types/fail_type_elaboration_local_mode_cached_three_edge_chain_gap_001.miz
definition
  mode BaseModeDef: BaseMode is set;
end;

definition
  mode InnerModeDef: InnerMode is BaseMode;
end;

definition
  mode MiddleModeDef: MiddleMode is InnerMode;
end;

definition
  mode OuterModeDef: OuterMode is MiddleMode;
end;

reserve y for MiddleMode;
reserve z for OuterMode;
